--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,8 +4,9 @@
 @import "../Layout/Footer/Footer.scss";
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
 @import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
-
-@import "../pages/Blog/Blog.scss";
+@import "../pages/Catalog/Tea/Tea-Filters/Tea-Filters.scss";
+@import "../pages/Catalog/Tea/Tea-Items/Tea-Items.scss";
+// @import "../pages/Blog/Blog.scss";
 
 @import "../Components/News/News.scss";
 
@@ -21,6 +22,12 @@
   max-width: 1210px;
   padding: 0 15px;
   margin: 0 auto;
+  @media (max-width: 470px){
+    padding: 0;
+  }
+  @media (min-width: 1556px){
+    max-width: 1556px;
+  }
 }
 a:active,
 button:active {
