--- a/src/pages/Contacts/Contact.scss
+++ b/src/pages/Contacts/Contact.scss
@@ -29,6 +29,7 @@
   background: #fff7e1;
   border: 1px solid #f9b300;
   border-radius: 4px;
+  cursor: pointer;
 }
 .switcр-stores {
   width: 580px;
@@ -39,6 +40,11 @@
   background: #f6f6f6;
   border: 1px solid #c9c9c9;
   border-radius: 4px;
+  cursor: pointer;
+}
+.switcр-stores:focus {
+  background: #fff7e1;
+  border: none;
 }
 .header-text {
   width: -40px;
@@ -164,5 +170,8 @@
 .aga {
   display: flex;
   justify-content: right;
-  margin-top: -405px;
+  //   margin-top: -405px;
+  transform: translateY(-331px);
+}
+.maps {
 }
