--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,213 +1,207 @@
+.fresh-coffe {
+  height: 600px;
+  background-color: aqua;
+  padding: 70px 20px 0 70px;
+}
+.fresh-coffe-inner {
+  display: flex;
+  padding-top: 30px;
+}
+.fresh-coffe-container {
+  margin-top: 40px;
+}
+.fresh-coffe-left > h1 {
+  width: 960px;
+  height: 100px;
+  left: 60px;
+  top: 156px;
 
-.fresh-coffe{
-        height: 600px;
-        background-color: aqua;
-        padding: 70px 20px 0 70px;
-    }
-    .fresh-coffe-inner{
-        display: flex;
-        padding-top: 30px;
-    }
-    .fresh-coffe-container{
-        margin-top: 40px;
-    }
-    .fresh-coffe-left > h1 {
-        width: 960px;
-        height: 100px;
-        left: 60px;
-        top: 156px;
-        
-        font-size: 80px;
-        line-height: 100px;
-    }
-    .fresh-coffe-left > p{
-        width: 400px;
-        line-height: 24px;
-        padding-top: 40px;
-    }
-    .fresh-coffe-left > span > b{
-        font-weight: 700;
-        font-size: 18px;
-    }
-    .fresh-coffe-left > button{
-        margin-top: 50px;
-        width: 200px;
-        height: 45px;
-        background-color: #F9B300;
-        color: #fff;
-        font-size: 15px;
-        font-weight: 700;
-        border: none;
-        cursor: pointer;
-    }
-
-
-
-.catalog-products{
-    height: 700px;
-    .catalog-inner{
-        padding: 40px;
-
-    }
-    .catalog-inner > h2{
-        font-size: 50px;
-        padding-left: 116px;
-    }
-    .catalog-items{
-        display: flex;
-        justify-content: center;
-        padding-top: 80px;
-        gap: 20px;
-    }
-    .catalog-card{
-        position: relative;
-        width: 335px;
-        height: 410px;
-        background: #FFFFFF;
-        box-shadow: 0px 0px 30px rgba(146, 146, 146, 0.2);
-        border-radius: 20px;
-    }
-    .catalog-card_img{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .ct-tea-img{
-        max-width: 250px;
-        max-height: 250px;
-    }
-    .catalog-card_title{
-        text-align: center;
-        padding-top: 28px;
-    }
-    .catalog-card_button{
-        position: absolute;
-        left: 57px;
-        width: 230px;
-        height: 45px;
-        background-color: #F9B300;
-        color: #fff;
-        font-size: 15px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-    }
+  font-size: 80px;
+  line-height: 100px;
+}
+.fresh-coffe-left > p {
+  width: 400px;
+  line-height: 24px;
+  padding-top: 40px;
+}
+.fresh-coffe-left > span > b {
+  font-weight: 700;
+  font-size: 18px;
+}
+.fresh-coffe-left > button {
+  margin-top: 50px;
+  width: 200px;
+  height: 45px;
+  background-color: #f9b300;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 700;
+  border: none;
+  cursor: pointer;
 }
 
-.sale-items{
-    height: max-content;
-    background-color: aquamarine;
-    .sale-items-inner{
-        padding-top: 40px;
-        margin-left: 600px;    
-    }
-    .sale-items-inner > h1{
-        text-align: right;
-        left: 1430px;
-
-        font-family: 'Gilroy';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 30px;
-    }
-    .sale-items-inner > p {
-        height: 64px;
-        left: 604px;
-        top: 800px;
-        
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 130%;
-        
-        transform: translateY(80px);
-        text-align: right;
-        color: #000000;
-    }
+.catalog-products {
+  height: 700px;
+  .catalog-inner {
+    padding: 40px;
+  }
+  .catalog-inner > h2 {
+    font-size: 50px;
+    padding-left: 116px;
+  }
+  .catalog-items {
+    display: flex;
+    justify-content: center;
+    padding-top: 80px;
+    gap: 20px;
+  }
+  .catalog-card {
+    position: relative;
+    width: 335px;
+    height: 410px;
+    background: #ffffff;
+    box-shadow: 0px 0px 30px rgba(146, 146, 146, 0.2);
+    border-radius: 20px;
+  }
+  .catalog-card_img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .ct-tea-img {
+    max-width: 250px;
+    max-height: 250px;
+  }
+  .catalog-card_title {
+    text-align: center;
+    padding-top: 28px;
+  }
+  .catalog-card_button {
+    position: absolute;
+    left: 57px;
+    width: 230px;
+    height: 45px;
+    background-color: #f9b300;
+    color: #fff;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
 }
 
-.advantages{
-    height: 900px;
-    background-color: #FFF7E1;
-    .advantages-inner{
-        padding-top: 200px;
-        display: flex;
-    }
-    .advantages-left{
-        display: flex;
-        position: relative;
-    }
-    .advantages-left > .img2{
-        position: absolute;
-        left: 125px;
+.sale-items {
+  height: max-content;
+  background-color: aquamarine;
+  .sale-items-inner {
+    padding-top: 40px;
+    margin-left: 600px;
+  }
+  .sale-items-inner > h1 {
+    text-align: right;
+    left: 1430px;
 
-        max-width: 600px;
-        max-height: 400px;
-    }
-    .advantages-left > .img1{
-        position: absolute;
-        z-index: 100;
-        left: 188px;
-        top: 105px;
+    font-family: "Gilroy";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+  }
+  .sale-items-inner > p {
+    height: 64px;
+    left: 604px;
+    top: 800px;
 
-        max-width: 400px;
-        max-height: 300px;
-    }
-    .advantages-right{
-        transform: translateX(700px);
-    }
-    .advantages-right > h2{
-        font-weight: bold;
-        font-size: 35px;
-        width: 404px;
-        transform: translateY(-65px);
-    }
-    .advent-imgs{
-        transform: translateX(-110px);
-    }
-    .advantages-block > .ad-block-content{
-        transform: translateY(-90px);
-    }
-    .ad-block-content > h3{
-        font-weight: bolder;
-        font-size: 21px;
-        line-height: 55px;
-    }
-    .ad-block-content > p{
-        width: 334px;
-    }
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 130%;
 
+    transform: translateY(80px);
+    text-align: right;
+    color: #000000;
+  }
 }
 
+.advantages {
+  height: 900px;
+  background-color: #fff7e1;
+  .advantages-inner {
+    padding-top: 200px;
+    display: flex;
+  }
+  .advantages-left {
+    display: flex;
+    position: relative;
+  }
+  .advantages-left > .img2 {
+    position: absolute;
+    left: 125px;
 
-.roast-coffe{
-    // width: 1903px;
-    height: 700px;
-    background: url('../../assets/Images/roastCoffe.png');
-    .roast-coffe-inner{
-        padding: 70px;
-        color: white;
-    }
-    .roast-coffe-inner > h2{
-        font-family: 'Gilroy';
-        font-style: normal;
-        font-weight: 900;
-        font-size: 35px;
-        line-height: 150px;
-    }
-    .roast-coffe-inner > p{
-        width: 776px;
-        line-height: 20px;
-        padding-bottom: 20px;
-    }
-    .roast-coffe-inner > button{
-        margin-top: 80px;
-        width: 230px;
-        height: 45px;
-        background-color: #F9B300;
-        color: #fff;
-        font-size: 15px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-    }
+    max-width: 600px;
+    max-height: 400px;
+  }
+  .advantages-left > .img1 {
+    position: absolute;
+    z-index: 100;
+    left: 188px;
+    top: 105px;
+
+    max-width: 400px;
+    max-height: 300px;
+  }
+  .advantages-right {
+    transform: translateX(700px);
+  }
+  .advantages-right > h2 {
+    font-weight: bold;
+    font-size: 35px;
+    width: 404px;
+    transform: translateY(-65px);
+  }
+  .advent-imgs {
+    transform: translateX(-110px);
+  }
+  .advantages-block > .ad-block-content {
+    transform: translateY(-90px);
+  }
+  .ad-block-content > h3 {
+    font-weight: bolder;
+    font-size: 21px;
+    line-height: 55px;
+  }
+  .ad-block-content > p {
+    width: 334px;
+  }
+}
+
+.roast-coffe {
+  // width: 1903px;
+  height: 700px;
+  background: url("../../assets/Images/roastCoffe.png");
+  .roast-coffe-inner {
+    padding: 70px;
+    color: white;
+  }
+  .roast-coffe-inner > h2 {
+    font-family: "Gilroy";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 35px;
+    line-height: 150px;
+  }
+  .roast-coffe-inner > p {
+    width: 776px;
+    line-height: 20px;
+    padding-bottom: 20px;
+  }
+  .roast-coffe-inner > button {
+    margin-top: 80px;
+    width: 230px;
+    height: 45px;
+    background-color: #f9b300;
+    color: #fff;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
 }
