--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -88,10 +88,11 @@
   border: 2px;
 }
 .button_tag {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  gap: 20px;
+  margin-top: -30px;
 }
 
 .button_numb {
@@ -108,6 +109,7 @@
   background: #f7f7f7;
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
+  color: #f9b300;
 }
 .button_numbtag3 {
   width: 180px;
@@ -115,6 +117,7 @@
   background: #f7f7f7;
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
+  color: #f9b300;
 }
 .button_numbtag4 {
   width: 180px;
@@ -122,6 +125,7 @@
   background: #f7f7f7;
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
+  color: #f9b300;
 }
 .button_numbtag5 {
   width: 180px;
@@ -129,4 +133,8 @@
   background: #f7f7f7;
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
+  color: #f9b300;
+}
+.ul_news {
+  display: flex;
 }
