--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -47,17 +47,18 @@
     height: 700px;
     .catalog-inner{
         padding: 40px;
-
+        width: max-content;
     }
     .catalog-inner > h2{
         font-size: 50px;
-        padding-left: 116px;
+        transform: translateX(-144px);
     }
     .catalog-items{
         display: flex;
         justify-content: center;
         padding-top: 80px;
         gap: 20px;
+        transform: translateX(-110px);
     }
     .catalog-card{
         position: relative;
@@ -95,7 +96,7 @@
 }
 
 .sale-items{
-    height: max-content;
+    height: 600px;
     background-color: aquamarine;
     .sale-items-inner{
         padding-top: 40px;
@@ -103,7 +104,6 @@
     }
     .sale-items-inner > h1{
         text-align: right;
-        left: 1430px;
 
         font-family: 'Gilroy';
         font-style: normal;
@@ -111,17 +111,13 @@
         font-size: 30px;
     }
     .sale-items-inner > p {
-        height: 64px;
-        left: 604px;
-        top: 800px;
-        
+        width: 760px;
         font-weight: 500;
         font-size: 20px;
         line-height: 130%;
         
-        transform: translateY(80px);
+        transform: translate(-175px, 39px);
         text-align: right;
-        color: #000000;
     }
 }
 
@@ -131,17 +127,18 @@
     .advantages-inner{
         padding-top: 200px;
         display: flex;
+        gap: 100px;
     }
     .advantages-left{
         display: flex;
         position: relative;
+        transform: translateX(-332px);
     }
     .advantages-left > .img2{
         position: absolute;
         left: 125px;
-
-        max-width: 600px;
-        max-height: 400px;
+        max-width: 700px;
+        max-height: 500px;
     }
     .advantages-left > .img1{
         position: absolute;
@@ -149,8 +146,8 @@
         left: 188px;
         top: 105px;
 
-        max-width: 400px;
-        max-height: 300px;
+        max-width: 500px;
+        max-height: 400px;
     }
     .advantages-right{
         transform: translateX(700px);
@@ -158,8 +155,8 @@
     .advantages-right > h2{
         font-weight: bold;
         font-size: 35px;
-        width: 404px;
-        transform: translateY(-65px);
+        width: 370px;
+        transform: translate(-123px, -100px);
     }
     .advent-imgs{
         transform: translateX(-110px);
@@ -186,6 +183,7 @@
     .roast-coffe-inner{
         padding: 70px;
         color: white;
+        transform: translateX(-240px);
     }
     .roast-coffe-inner > h2{
         font-family: 'Gilroy';
@@ -198,6 +196,7 @@
         width: 776px;
         line-height: 20px;
         padding-bottom: 20px;
+        font-size: 18px;
     }
     .roast-coffe-inner > button{
         margin-top: 80px;
