--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,9 +4,11 @@
 @import "../Layout/Footer/Footer.scss";
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
 @import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
-
-@import "../pages/Contacts/Contact.scss";
+@import "../pages/Catalog/Tea/Tea-Filters/Tea-Filters.scss";
+@import "../pages/Catalog/Tea/Tea-Items/Tea-Items.scss";
+@import "../Components/UI/Slider/Slider.scss";
 @import "../pages/Blog/Blog.scss";
+
 @import "../Components/News/News.scss";
 
 * {
@@ -19,6 +21,12 @@
   max-width: 1210px;
   padding: 0 15px;
   margin: 0 auto;
+  @media (max-width: 470px){
+    padding: 0;
+  }
+  @media (min-width: 1556px){
+    max-width: 1556px;
+  }
 }
 a:active,
 button:active {
