add: catalog Filters

--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -192,6 +192,10 @@
   min-width: 100%;
   position: sticky;
   top: 0;
+  max-height: 113px;
+  @media (min-width: 1210px) {
+    padding-right: 41px;
+  }
   background-color: rgb(255, 255, 255);
   @media (max-width: 500px) {
     max-height: 70px;
