--- a/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss
@@ -45,12 +45,51 @@
                     position: absolute;
                     transform: translateY(-67px);
                 }
+                &-top{
+                    &-left > p{
+                        color: #F9B300;
+                    }
+                    &-left{
+                        line-height: 23px;
+                    }
+                    &-right > select > option{
+                        font-size: larger;
+                    }
+                    &-right > select{
+                        background: #FFF7E1;
+                        border: 0.708508px solid #F9B300;
+                        border-radius: 4px;
+                        padding: 4px 18px;
+                        font-size: medium;
+                    }
+                }
                 &-center{
                     display: flex;
+                    &-left > img{
+                        -webkit-transition: all 0.4s ease;
+                        -moz-transition: all 0.4s ease;
+                        -ms-transition: all 0.4s ease;
+                        transition: all 0.4s ease;
+                    }
+                    &-left > img:hover{
+                        -moz-transform: scale(1.1);
+                        -webkit-transform: scale(1.1);
+                        transform: scale(1.1);
+                    }
                     &-left{
-                        width: 120;
+                        display: flex;
+                        align-items: center;
+                        width: 120px;
                         height: 218px;
-                        overflow: auto;
+                        margin-top: 14px;
+                        overflow: hidden;
+                    }
+                    &-right{
+                        &-review{
+                            margin-bottom: 40px;
+                        }
+                        margin-top: 35px;
+                        margin-left: 16px;
                     }
                 }
                 &-top{
