--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,8 @@
 @import "../pages/Blog/Blog.scss";
 @import "../Components/News/News.scss";
 
+@import "../pages/Cart/Cart.scss";
+
 
 * {
   padding: 0;
