--- a/src/Components/News/News.scss
+++ b/src/Components/News/News.scss
@@ -1,7 +1,6 @@
 .news {
   max-width: 100%;
-  height: 600px;
-  background-color: cornflowerblue;
+  height: 800px;
   .news-container {
     max-width: 1556px;
     padding: 0 30px;
@@ -12,9 +11,59 @@
   }
   .news-inner > h2 {
     font-size: 34px;
+    padding-bottom: 50px;
   }
-  .news-posts-row {
+  .post-card{
     display: flex;
-    flex-wrap: wrap;
+  }
+  .post-left{
+    transform: translateX(10px);
+  }
+  .post-right{
+    padding: 24px 55px 20px 120px;
+    width: 680px;
+    height: 280px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
+    border-radius: 14px;
+  }
+  .post-right > h2{
+    width: 465px;
+    margin-bottom: 20px;
+  }
+  .post-right > p{
+    width: 325px;
+    margin-bottom: 10px;
+  }
+  .post-right > a{
+    color: #F9B300;
+  }
+  .post-second{
+    width: 500px;
+    height: 283px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
+    border-radius: 14.1702px;
+    padding: 50px 100px 42px 80px;
+  }
+  .post-second > h2{
+    width: 348px;
+    padding-bottom: 20px;
+  }
+  .post-second > p{
+    width: 353px;
+    padding-bottom: 20px;
+  }
+  .post-second > a{
+    color: #F9B300;
+  }
+  .posts-above{
+    display: flex;
+    gap: 20px;
+    padding-bottom: 20px;
+  }
+  .posts-bellow{
+    display: flex;
+    gap: 20px;
   }
 }
