forgot to add arrow to right

--- a/src/Components/News/News.scss
+++ b/src/Components/News/News.scss
@@ -38,6 +38,9 @@
   .post-right > a{
     color: #F9B300;
   }
+  .arrow-right{
+    transform: translate(92px, -16px);
+  }
   .post-second{
     width: 500px;
     height: 283px;
