add: vending catalog

--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -26,6 +26,9 @@
   &-back {
     background: linear-gradient(to bottom, #f9b300 331px, transparent 331px);
   }
+  &-back-healthy{
+    background: linear-gradient(to bottom, #f9b300 229px, transparent 229px);
+  }
 
   &-bottom {
     &-blocks {
