--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "../pages/Catalog/Coffee/Coffee-Items/Coffee-Items.scss";
 @import "../pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss";
 @import "../pages/Catalog/Tea/Tea-Filters/Tea-Filters.scss";
+@import "../pages/Catalog/HealthyEating/HealthyEating-Filters/HealthyEating-Filters.scss";
 @import "../pages/Catalog/Tea/Tea-Items/Tea-Items.scss";
 @import "../pages/Contacts/Contact.scss";
 @import "../pages/Blog/Blog.scss";
