--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -12,15 +12,15 @@
   .Cart-ul{
     display: flex;
   }
+//карточка товара в корзине
   .Cart-product{
     width: 1180px;
-    height: 517px;
     border-radius: 14px;
     border: 0.708508px solid #E4E4E4;
     box-shadow: 0px 0px 35.4254px rgba(163, 163, 163, 0.25);
     background-color: white;
   }
-  .Block-inside{
+  .Cart-inside{
     margin-left: 100px;
   }
   .Cart-product-up{
@@ -53,7 +53,7 @@
   .Cart-card{
     width: 980px;
     height: 122px;
-    margin-top: 15px;
+    margin: 15px 0 15px 0;
     display: flex;
     align-items: center;
     background-color: rgba(252, 252, 252, 1);
@@ -71,7 +71,6 @@
       padding-right: 15px;
     }
   }
-
   .Card-close{
     border: 0;
     background: rgba(252, 252, 252, 1);
@@ -87,6 +86,148 @@
   .Card-click{
     display: flex;
   }
+  //карточка доставки
+  .Cart-delivery{
+    width: 1180px;
+    height: 543px;
+    margin-top: 20px;
+    background: #FFFFFF;
+    border: 0.708508px solid #E4E4E4;
+    box-shadow: 0px 0px 35.4254px rgba(163, 163, 163, 0.25);
+    border-radius: 14px;
+  }
+  .Delivery-inside{
+    margin-left: 100px;
+  }
+  .Delivery-head{
+    padding: 50px 0 35px 0;
+  }
+  .Delivery-input{
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(5, 1fr);
+    ::placeholder{
+      color: rgba(196, 196, 196, 1);
+    }
+  }
+  .Delivery-input input{
+    display: block;
+    width: 480px;
+    height: 49px;
+    margin-bottom: 15px;
+    text-indent: 40px;
+    background: #FCFCFC;
+    border: 1px solid #F6F6F6;
+    border-radius: 4px;
+  }
+  .Delivery-btn{
+    width: 980px;
+    height: 49px;
+    background: #FFF7E1;
+    border: 0.708508px solid #F9B300;
+    border-radius: 4px;
+    color: #F9B300;
+    font-size: 18px;
+  }
+  //Карточка промокода
+  .Cart-down{
+    margin: 20px 0 150px 0;
+    display: flex;
+  }
+  .Cart-promo{
+    width: 730px;
+    height: 317px;
+    background: #FFFFFF;
+    border: 1px solid #E4E4E4;
+    box-shadow: 0px 0px 35.4254px rgba(163, 163, 163, 0.25);
+    border-radius: 14px;
+  }
+  .Promo-inside{
+    margin-left: 100px;
+  }
+  .Promo-head{
+    padding-top: 40px;
+  p{
+    padding: 20px 0 30px 0;
+    width: 380px;
+    font-size: 14px;
+    font-family: Gilroy;
+  }
+  }
+  .Promo-inp{
+    width: 480px;
+    height: 49px;
+    background: #FCFCFC;
+    border: 1px solid #F6F6F6;
+    border-radius: 4px;
+    text-indent: 40px;
+  }
+  .Promo-inp::placeholder{
+    color: rgba(196, 196, 196, 1);
+  }
+  .Promo-btn{
+    width: 480px;
+    height: 49px;
+    margin-top: 25px;
+    background: #FFF7E1;
+    border: 1px solid #F9B300;
+    border-radius: 4px;
+    color: rgba(249, 179, 0, 1);
+  }
+  .Cart-total{
+    width: 480px;
+    height: 317px;
+    margin-left: 20px;
+    background: #FFFFFF;
+    border: 1px solid #E4E4E4;
+    box-shadow: 0px 0px 35.4254px rgba(163, 163, 163, 0.25);
+    border-radius: 14px;
+  }
+  .Total-inside{
+    margin-left: 50px;
+  }
+  .Total-head{
+    display: flex;
+    align-items: center;
+    padding: 40px 0 12px 0;
+    h2{
+      padding-right: 142px;
+    }
+  }
+  .Total-skidka{
+    color: #747474;
+    font-size: 14px;
+    padding-bottom: 7px;
+  }
+  .Dostavka{
+    font-size: 14px;
+  }
+  .btne{
+    border-radius: 100px;
+    border: 6px solid rgba(249, 179, 0, 1);
+  }
+  .Total-btn{
+    width: 380px;
+    height: 49px;
+    margin-top: 21px;
+    background: rgba(249, 179, 0, 1);
+    border: none;
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 1);
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    font-family: 'Gilroy'
+  }
+  .Total-down p {
+    width: 368px;
+    font-family: 'Gilroy';
+    font-size: 10px;
+    color: #747474;
+  }
+
+  
+
  
  
 
