--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@
 @import "../pages/Catalog/Tea/Tea-Items/Tea-Items.scss";
 @import "../Components/UI/Slider/Slider.scss";
 @import "../pages/Blog/Blog.scss";
-
+@import "../Components/Instagram/instaram.scss";
 @import "../Components/News/News.scss";
 
 * {
