--- a/src/pages/Contacts/Contact.scss
+++ b/src/pages/Contacts/Contact.scss
@@ -168,8 +168,9 @@
   color: #000000;
 }
 .aga {
-  position: relative;
-  transform: translate(499px, -336px);
+  display: flex;
+  justify-content: right;
+  transform: translateY(-336px);
 }
 
 .map {
