add: coffee filters

--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -32,6 +32,8 @@
 
   &-bottom {
     &-blocks {
+      text-align: center;
+      justify-content: center;
       z-index: 4;
       position: relative;
       flex-wrap: wrap;
