add: coffee filters styles & fix: db.jsn

--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -42,6 +42,9 @@
         @media (max-width: 470px){
           width: 342px;
         }
+        @media (max-width: 981px){
+          color: white;
+        }
         height: 43px;
         line-height: 44px;
       }
