--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -32,19 +32,20 @@
 
   &-bottom {
     &-blocks {
-      text-align: center;
-      justify-content: center;
+      @media (max-width: 1032px){
+        text-align: center;
+        justify-content: center;
+      }
       z-index: 4;
       position: relative;
       flex-wrap: wrap;
       @media (min-width: 1210px) {
         display: flex;
       }
-
+      
       &-item:hover {
         opacity: 0.7;
       }
-
       &-item:active {
         cursor: default;
       }
@@ -59,7 +60,7 @@
         height: 134px;
         display: flex;
 
-        &-inner > p {
+        &-inner > div{
           padding: 20px 0 15px;
         }
 
@@ -70,6 +71,9 @@
           justify-content: center;
           flex-wrap: wrap;
           align-content: space-between;
+          // &-top{
+          //   justify-content: right;
+          // }
         }
       }
       display: flex;
@@ -105,6 +109,9 @@
     z-index: 3;
   }
   &__left > h1 {
+    @media (max-width: 967px){
+      color: #000000;
+    }
     margin-top: 100px;
     font-weight: 900;
     font-size: 50px;
@@ -121,6 +128,9 @@
   &-nav-item {
     color: white;
     font-size: 12px;
+    @media (max-width: 967px){
+      color: #000000;
+    }
   }
   &-nav {
     margin-top: 30px;
@@ -144,6 +154,7 @@
   &-function-left {
     display: flex;
     width: 280px;
+    z-index: 4;
     border-radius: 14.1702px;
     height: 373px;
     background-color: white;
