add: coffee filters by geography

--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -60,7 +60,7 @@
         height: 134px;
         display: flex;
 
-        &-inner > div{
+        &-inner > p{
           padding: 20px 0 15px;
         }
 
