--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,8 @@
 @import "../pages/Blog/Blog.scss";
 @import "../Components/Instagram/instaram.scss";
 @import "../Components/News/News.scss";
+@import "../Components//UI/SliderItems/SliderItems.scss";
+@import "../Components/UI/InstaSlider/Slider.scss";
 
 * {
   padding: 0;
