--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -94,13 +94,10 @@
     margin-top: 35px;
     margin-bottom: 30px;
     padding-right: 12px;
-    margin-left: 40px;
+    margin-left: 5px;
+    display: flex;
   }
 
-  .discount__button {
-    display: flex;
-    justify-content: space-between;
-  }
 
   .discount__btn {
     width: 23px;
@@ -110,7 +107,7 @@
     font-weight: 600;
     font-size: 17.7127px;
     line-height: 21px;
-    transform: translate(-5px, -22px);
+    transform: translate(365px, -29px);
   }
 }
 
@@ -122,17 +119,27 @@
   line-height: 17px;
   margin-bottom: 30px;
 }
-.discount h1 {
+.discount_1 {
   font-weight: 900;
   color: #ffffff;
   font-size: 22px;
   line-height: 27px;
 }
 
+.discount_2 {
+  font-family: 'Gilroy';
+  font-style: normal;
+  font-weight: 700;
+  margin-bottom: 20px;
+  font-size: 12px;
+  line-height: 14px;
+}
+
 .discount p {
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
+  margin-bottom: 7px;
 }
 
 ///////BLOCK----2
@@ -283,4 +290,12 @@
   font-size: 14px;
   line-height: 16px;
   color: #ffffff;
+}
+
+.discount-block.none{
+display: none;
+}
+
+.discount-block {
+  margin-bottom: 50px;
 }
