--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "../pages/Catalog/Tea/Tea-Items/Tea-Items.scss";
 @import "../Components/UI/Slider/Slider.scss";
 @import "../pages/Blog/Blog.scss";
+@import "../pages/Contacts/Contact.scss";
 @import "../Components/Instagram/instaram.scss";
 @import "../Components/News/News.scss";
 @import "../Components//UI/SliderItems/SliderItems.scss";
