--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -39,10 +39,9 @@
 
 .yellow-gradient-right{
   max-width: 530px;
-  position: absolute;
+  // position: absolute;
   transform: translateY(-420px);
-  max-height: 100%;
-  margin-left: 75%;
+  margin-left: 1329px;
 }
 .yellow-gradient-left{
   max-width: 400px;
