--- a/src/Components/UI/SliderItems/SliderItems.scss
+++ b/src/Components/UI/SliderItems/SliderItems.scss
@@ -5,21 +5,21 @@
     position: relative;
     transform: translate(-290px, -14px);
     &__show{
-        position: absolute;
+        // position: absolute;
         width: 950px;
         height: 100%;
         display: flex;
         overflow: hidden;
         text-align: center;
-        justify-content: center;
         gap: 40px;
         place-content: center;
         align-items: center;
-        padding-left: 10px;
+        padding: 15px;
     }
     &__inner{
-        max-width: 1900px;
+        max-width: 1680px;
         display: flex;
+        gap: 65px;
     }
     .item-card{
         margin-top: 60px;
