--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "../Components/Instagram/instaram.scss";
 @import "../Components/News/News.scss";
 @import "../Components//UI/SliderItems/SliderItems.scss";
+@import "../Components/UI/Slider/Slider.scss";
 @import "../Components/UI/InstaSlider/Slider.scss";
  
 * {
