--- a/src/Components/UI/Slider/Slider.scss
+++ b/src/Components/UI/Slider/Slider.scss
@@ -1,11 +1,13 @@
-.fresh-right {
-  margin-left: 128px;
-  z-index: 100;
+.fresh-coffe-right{
+ position: relative;
+ z-index: 1;
 }
 
 .slider {
+  position: absolute;
   max-width: 210px; 
   margin: 0 auto;
+  right: 1175px;
 }
 .slideshow {
   position: absolute;
