add: last change by Baktygul

--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -66,6 +66,9 @@
   color: #000000;
   margin: 80px 915px 40px 0px;
 }
+.forref{
+  transform: translateY(-100px);
+}
 .text_infop {
   width: 978px;
   height: 272px;
