--- a/src/Components/Instagram/instaram.scss
+++ b/src/Components/Instagram/instaram.scss
@@ -1,27 +1,47 @@
 .instagram{
-    height: 900px;
-    // background-color: #F9B300;
+    height: 850px;
+    padding-top: 50px;
+    transform: translateY(190px);
     .instagram-inner{
         padding: 70px;
+        transform: translateY(-150px);
     }
     .insta-title{
         display: flex;
         align-items: center;
-        gap: 30px;
-        margin-bottom: 40px;
+        gap: 10px;
+    }
+    .forDF{
+        transform: translate( 65px, -95px);
     }
     .instagram-left{
         display: flex;
+        transform: translateX(-105px);
     }
     .instagram-left > img{
         max-width: 100%;
         height: 100%;
     }
-    .instagram-left > .iphone1{
-        
-    }
     .instagram-left > .iphone2{
-        transform: translate(-690px, 105px);
+        transform: translate(-815px, 73px);
     }
-    
+    .insta-sides{
+        display: flex;
+        transform: translateY(-10px);
+    }
+    .instagram-right{
+        position: relative;
+    }
+    .insta-back{
+        background: linear-gradient(to bottom, #f9b300 549px, transparent 331px);
+        background-position-y: 113px;
+    }
+    .instagram-bottom{
+        background-image: url('../../assets/Images/instagram-bottom-back.svg');
+        background-size: cover;
+        transform: translate(0, -180px);
+        margin-bottom: 300px;
+        min-height: 180px;
+        min-width: 100%;
+    }
 }
