--- a/src/Components/News/News.scss
+++ b/src/Components/News/News.scss
@@ -1,6 +1,8 @@
 .news {
   max-width: 100%;
-  height: 800px;
+  height: 805px;
+  background: #FFF7E1;
+  transform: translateY(360px);
   .news-container {
     max-width: 1556px;
     padding: 0 30px;
@@ -8,6 +10,7 @@
   }
   .news-inner {
     padding: 60px;
+    transform: translateY(-350px);
   }
   .news-title{
     display: flex;
