--- a/src/Components/UI/InstaSlider/Slider.scss
+++ b/src/Components/UI/InstaSlider/Slider.scss
@@ -50,7 +50,7 @@
     transition: all 1000ms;
 }
 
-.post-img > img{
+.insta-post-img > img{
     width: 300px;
     height: 300px;
     border-radius: 3px;
